@@ -1,5 +1,6 @@
 import unittest
 import win32event
+import pywintypes
 import time
 import os
 import sys
@@ -28,6 +29,13 @@ class TestWaitableTimer(unittest.TestCase):
         rc = win32event.WaitForSingleObject(h, 10) # 10 ms.
         self.failUnlessEqual(rc, win32event.WAIT_TIMEOUT)
 
+    def testWaitableError(self):
+        h = win32event.CreateWaitableTimer(None, 0, None)
+        h.close()
+        self.assertRaises(pywintypes.error, win32event.SetWaitableTimer,
+                          h, -42, 0, None, None, 0)
+
+
 class TestWaitFunctions(unittest.TestCase):
     def testMsgWaitForMultipleObjects(self):
         # this function used to segfault when called with an empty list
@@ -50,6 +58,58 @@ class TestWaitFunctions(unittest.TestCase):
         event = win32event.CreateEvent(None, 0, 0, None)
         res = win32event.MsgWaitForMultipleObjectsEx([event], 0, 0, 0)
         self.assertEquals(res, win32event.WAIT_TIMEOUT)
+
+
+class TestEvent(unittest.TestCase):
+
+    def assertSignaled(self, event):
+        self.assertEquals(win32event.WaitForSingleObject(event, 0),
+                          win32event.WAIT_OBJECT_0)
+
+    def assertNotSignaled(self, event):
+        self.assertEquals(win32event.WaitForSingleObject(event, 0),
+                          win32event.WAIT_TIMEOUT)
+
+    def testCreateEvent(self):
+        event = win32event.CreateEvent(None, False, False, None)
+        self.assertNotSignaled(event)
+        event = win32event.CreateEvent(None, False, True, None)
+        self.assertSignaled(event)
+        self.assertNotSignaled(event)
+        event = win32event.CreateEvent(None, True, True, None)
+        self.assertSignaled(event)
+        self.assertSignaled(event)
+
+    def testSetEvent(self):
+        event = win32event.CreateEvent(None, True, False, None)
+        self.assertNotSignaled(event)
+        res = win32event.SetEvent(event)
+        self.assertEquals(res, None)
+        self.assertSignaled(event)
+        event.close()
+        self.assertRaises(pywintypes.error, win32event.SetEvent, event)
+
+    def testResetEvent(self):
+        event = win32event.CreateEvent(None, True, True, None)
+        self.assertSignaled(event)
+        res = win32event.ResetEvent(event)
+        self.assertEquals(res, None)
+        self.assertNotSignaled(event)
+        event.close()
+        self.assertRaises(pywintypes.error, win32event.ResetEvent, event)
+
+
+class TestMutex(unittest.TestCase):
+
+    def testReleaseMutex(self):
+        mutex = win32event.CreateMutex(None, True, None)
+        res = win32event.ReleaseMutex(mutex)
+        self.assertEqual(res, None)
+        res = win32event.WaitForSingleObject(mutex, 0)
+        self.assertEqual(res, win32event.WAIT_OBJECT_0)
+        mutex.close()
+        self.assertRaises(pywintypes.error, win32event.ReleaseMutex, mutex)
+
 
 if __name__=='__main__':
     unittest.main()
